# tree-sitter-type-gen

./: Cargo.toml  README.md
grammars/tree-sitter-type-gen-rust/: Cargo.toml  build.rs
grammars/tree-sitter-type-gen-rust/src/: lib.rs
grammars/tree-sitter-types-common/: Cargo.toml
grammars/tree-sitter-types-common/src/: lib.rs
grammars/tree-sitter-types-rust/: Cargo.toml
grammars/tree-sitter-types-rust/src/: lib.rs
src/: lib.rs  main.rs  node.rs  prelude.rs  rename.rs  structures.rs  symbols.rs  type_inference.rs
src/lang_gen/: container.rs  container_def.rs  enums.rs  impls.rs  mod.rs  structs.rs  type_complete.rs  type_def.rs  type_ref.rs
