[package]
name = "tree-sitter-types-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter-rust = "0.20.4"
tree-sitter-types-common = { path = "../tree-sitter-types-common" }
thiserror = { version = "1.0", optional = true }

[features]
thiserror = ["dep:thiserror"]

[build-dependencies]
tree-sitter-rust = "0.20.4"
tree-sitter-type-gen = { path = "../.." }
